--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "http-server site",
+    "server": "node server.js",
     "test": "node tests.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^0.11.1",
     "pa11y": "^5.2.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
