--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "pa11y": "^5.2.0"
+    "pa11y": "^5.2.0",
+    "pa11y-reporter-html": "^1.0.0"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
