--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "fs-extra": "^8.1.0",
     "pa11y": "^5.2.0",
     "pa11y-reporter-html": "^1.0.0"
   },
